[package]
name = "brewblog"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.1"
fs_extra = "1.1"
notify = "4.0"
pulldown-cmark = "0.7"
serde = "1.0"
serde_derive = "1.0"
tera = "1.3"
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"
warp = "0.2"