[package]
name = "brewblog"
description = "Another static site generator"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cbrewster/brewblog"
repository = "https://github.com/cbrewster/brewblog"
keywords = ["static", "site", "generator", "blog"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.1"
fs_extra = "1.1"
notify = "4.0"
pulldown-cmark = "0.7"
serde = "1.0"
serde_derive = "1.0"
syntect = "4.1"
tera = "1.3"
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"
warp = "0.2"