[package]
name = "brewblog"
description = "Another static site generator"
version = "0.1.6"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cbrewster/brewblog"
repository = "https://github.com/cbrewster/brewblog"
keywords = ["static", "site", "generator", "blog"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.1"
fs_extra = { version = "1.1", default-features = false }
notify = { version = "4.0", default-features = false }
pulldown-cmark = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
syntect = { version = "4.1", default-features = false, features = ["default-fancy"] }
tera = "1.3"
tokio = { version = "0.2", default-fearures = false, features = ["macros"] }
toml = { version = "0.5", default-features = false }
warp = { version = "0.2", default-features = false }